tests/baselines/reference/memberAccessMustUseModuleInstances.errors.txt
memberAccessMustUseModuleInstances_0.ts(3,9): error TS2322: Type 'null' is not assignable to type 'Promise'.


==== memberAccessMustUseModuleInstances_1.ts (0 errors) ====
    ///<reference path='memberAccessMustUseModuleInstances_0.ts'/>
    import WinJS = require('memberAccessMustUseModuleInstances_0');
    
    WinJS.Promise.timeout(10);
    
==== memberAccessMustUseModuleInstances_0.ts (1 errors) ====
    export class Promise {
        static timeout(delay: number): Promise {
            return null;
            ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'Promise'.
        }
    }
    